--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,14 +23,14 @@
 }
 // SECCION 2
 .seccion2{
-    position: relative;
-    display: inline-block;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+//   height: auto;
+//   justify-content: center;
+//   align-items: center;
 }
 .parrafo1{
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    
 }
 //RESPONSIVE 
 @media (max-width: 720px){
