--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -458,10 +458,15 @@ footer{
     //right:10px;
 }
 .foot-ctrl{
-    background-image: url(../../public/images/img--37.jpg);
+    background-image: url(../../public/images/img--37-r.jpg);
     background-repeat: no-repeat;
     height: auto;
 }
-.img-ft-ct{
-    
+.abajof{
+    position: absolute;
+    bottom: -3.4%;
+    //right:10px;
+}
+.img-ft-lf{
+    position: absolute;
 }
