--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -370,6 +370,14 @@ textarea {
 .marino{
     background-color:#061939;
 }
+.amarinado{
+    background-color: #034360;
+}
+
+.amarinadot{
+    color: #034360;
+}
+
 
 img{
     max-height: 100%;
