v escritorio casi terminada falta scroll y detalles

--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -470,3 +470,40 @@ footer{
 .img-ft-lf{
     position: absolute;
 }
+.cat{
+    position: relative;
+    right: -14em;
+    top: 2.3em;
+    color:#044363;
+}
+.part1{
+    position: relative;
+    top: 2.7em;
+    color:#ecfcf4; 
+    font-weight: 400;
+    letter-spacing: 0.2em;
+}
+.part2{
+    position: relative;
+    top: 2.7em;
+    color:#04b3bb; 
+    font-weight: 400;
+    letter-spacing: 0.2em;
+}
+.dqst{
+    position: relative;
+    right: -12.8em;
+    top: 3.4em;
+    color:#044363;
+}
+.bomba{
+    position: relative;
+    top: -2.3em;
+}
+.tm{
+    margin-left: -2.6rem;
+}
+.img14{
+    position: relative;
+    top: -2.3em;
+}
