ok scroll hr de sec 1 y 2

--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -472,9 +472,10 @@ footer{
 }
 .cat{
     position: relative;
-    right: -14em;
-    top: 2.3em;
+    right: -14.2em;
+    top: -1.9em;
     color:#044363;
+    display:inline-block; 
 }
 .part1{
     position: relative;
@@ -495,6 +496,7 @@ footer{
     right: -12.8em;
     top: 3.4em;
     color:#044363;
+    display:inline-block; 
 }
 .bomba{
     position: relative;
