--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -450,7 +450,8 @@ img{
     padding-right: 0!important;
 }
 footer{
-    position:relative;
+    background-image: url(../../public/images/footer1.jpg);
+    background-repeat: no-repeat;
 }
 .abajo{
     position:absolute;
