--- a/public/css/appp.css
+++ b/public/css/appp.css
@@ -572,17 +572,12 @@ h2 {
 footer {
   background-image: url(/images/footer1.jpg?f90dc0dd04f5534cd3d3728e99cec45b);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .abajo {
   position: absolute;
   bottom: 0px;
-}
-
-.foot-ctrl {
-  background-image: url(/images/img--37-r.jpg?9547f5ec68fc86b252b5825387f765bb);
-  background-repeat: no-repeat;
-  height: auto;
 }
 
 .abajof {
