--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -452,16 +452,12 @@ img{
 footer{
     background-image: url(../../public/images/footer1.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .abajo{
     position:absolute;
     bottom:0px;
     //right:10px;
-}
-.foot-ctrl{
-    background-image: url(../../public/images/img--37-r.jpg);
-    background-repeat: no-repeat;
-    height: auto;
 }
 .abajof{
     position: absolute;
