--- a/public/css/appp.css
+++ b/public/css/appp.css
@@ -588,6 +588,7 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   height: 22rem;
+  background-position: center;
 }
 
 .abajo {
