--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -582,5 +582,13 @@ footer{
         height:18rem!important;
     }
 }
+@media (min-width: 426px){
+    .alerta{
+        transform: translate(10px);
+        right: 13rem;
+        top: 2rem;
+        max-width: 20em;
+    }
+}
 // margin-bottom: .5rem!important;
 // height: 18rem;
