--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -582,12 +582,18 @@ footer{
         height:18rem!important;
     }
 }
-@media (min-width: 426px){
+@media (min-width: 760px){
     .alerta{
         transform: translate(10px);
         right: 13rem;
         top: 2rem;
         max-width: 20em;
+    }
+}
+@media (max-width: 759px){
+    .alerta{
+        flex: 0 0 91.666667%;
+        max-width: 91.666667%;
     }
 }
 // margin-bottom: .5rem!important;
