--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -711,3 +711,6 @@ footer{
     transition: ease 1s all ;
     color:aliceblue!important;
 }
+.verdeagua{
+    background-color:#ecfcf4!important;
+}
