txt respuestas mas chicos ,ancor1 sin hover

--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -715,7 +715,11 @@ footer{
 .verdeagua{
     background-color:#ecfcf4!important;
 }
+// #accion:hover{
+//         color:;
+// }
 .noHover{
     pointer-events: none;
 }
+
 
