--- a/public/css/appp.css
+++ b/public/css/appp.css
@@ -862,6 +862,10 @@ footer {
   background-color: #ecfcf4 !important;
 }
 
+#accion:hover {
+  color: initial;
+}
+
 .noHover {
   pointer-events: none;
 }
