ultimos cambios,falta sacar banderas

--- a/resources/sass/appp.scss
+++ b/resources/sass/appp.scss
@@ -365,7 +365,7 @@ textarea {
 //PAGE
 
 *{
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body{
@@ -719,9 +719,9 @@ footer{
 .noHover{
     pointer-events: none;
 }
-.fa {
-    font-size: 0.75rem;
-}
+// .fa {
+//     font-size: 0.75rem;
+// }
 html {
     scroll-behavior: smooth;
   }
